--- a/views/live_checkin.ejs
+++ b/views/live_checkin.ejs
@@ -34,6 +34,9 @@
 </header>
 
     <div class="container_shahriar">
+      <form style="opacity:0;" class="rfid" method="POST" action="../main/check" >
+        <input style="opacity:0;" type="text" name="cardid" value="">
+      </form>
     <p id="today"></p>
       <section>
   <!--for demo wrap-->
