--- a/views/rfid.ejs
+++ b/views/rfid.ejs
@@ -17,7 +17,7 @@
         <hr />
 
           <div class="form__group">
-              <input type="text" name="rfid"  class="form__input" autofocus/>
+              <input style="opacity: 0;" type="text" name="rfid"  class="form__input" autofocus/>
           </div>
           <button class="btn">Submit</button>
       </form>
