--- a/views/stutest.ejs
+++ b/views/stutest.ejs
@@ -10,8 +10,8 @@
    </header>
 
    <div class="container boot">
-
       <div class="jumbotron row">
+        <%- messages('messages', locals) %>
              <table class="table table-students">
                <tbody>
                 <tr>
