--- a/views/students.ejs
+++ b/views/students.ejs
@@ -1,177 +1,160 @@
 <!DOCTYPE html>
+<html>
 
-<html lang="en">
 <head>
-	<% include ./partials/head %>
+  <meta charset="utf-8">
+  <title>Register New Student</title>
+
+    <% include ./partials/head %>
+    <link href="/css/students.css" rel="stylesheet" type="text/css">
 
 </head>
-<body class="container" >
+  <body>
+<header>
+    <% include ./partials/header %>
+</header>
 
-	<header>
-		<% include ./partials/header %>
-	</header>
+<!-- from here -->
 
+<div class="container">
+  <h4 class="message_success"> <%=message%>
+    <%if(currentuser){%>
+    <br />
+    Do you want to add Photo for <%=currentuser[0].stu_name%>
+    <li><a class="alink" href="/upload/<%= currentuser[0].stu_id %>" >Upload photo</a></li>
+    <%}%>
+</h4>
+        <div class="wrapper">
+          <form name="f1" method="POST" action="../students/add" >
+					<table class="table table-hover" id="acrylic">
+						<thead>
+							<tr>
+								<th> </th>
 
-  <main>
-		<div class="row">
+                <th> Register New Student </th>
+							</tr>
+						</thead>
+						<tbody >
+              <tr>
+                <td>Bootcamp</td>
+                <td>
+                	<select name="slelectbootcamp" >
+                		<option value="">Select bootcamp name</option>
+                    <%result.forEach(function(res){%>
+                    <option value="<%=res.bootcamp_id%>"> <%=res.bootcamp_name%> </option>
+                    <%});%>
+                  </select>
+                	 </td>
+              </tr>
+              <tr>
+                <td>Student name</td>
+                <td>
+                  <input type="text" name="stu_name" class="input_fields" required="" oninvalid="this.setCustomValidity('Name is required')"
+          oninput="setCustomValidity('')">
+                   </td>
+              </tr>
+          <!--//  TR -->
 
+          <!--  TR -->
+              <tr>
+                <td>Student birth date</td>
+                <td>
+                  <input type="date" name="stu_birth" class="input_fields" >
+                   </td>
+              </tr>
+          <!--//  TR -->
 
-				<div class="jumbotron" align="center">
-					<h4> <%=message%>
+          <!--  TR -->
+              <tr>
+                <td>Student nationality</td>
+                <td>
+                  <select class="input_fields" name="stu_nath" >
+                    <option value="">Select nationality</option>
+                    <%result_country.forEach(function(res){%>
+                    <option value="<%=res.num_code%>"> <%=res.nationality%> </option>
+                    <%});%>
+                  </select>
+                   </td>
+              </tr>
+          <!--//  TR -->
 
-						<%if(currentuser){%>
-						<br />
+          <!--  TR -->
+              <tr>
+                <td>Phone #</td>
+                <td>
+                  <input type="text" name="stu_phon" class="input_fields" >
+                   </td>
+              </tr>
+          <!--//  TR -->
 
-						Do you want to add Photo for <%=currentuser[0].stu_name%>
-						<li><a href="/upload/<%= currentuser[0].stu_id %>" >Upload photo</a></li>
+          <!--  TR -->
+              <tr>
+                <td>E-mail</td>
+                <td>
+                  <input type="text" name="stu_email" class="input_fields" required="" oninvalid="this.setCustomValidity('Name is required')"
+          oninput="setCustomValidity('')">
+                   </td>
+              </tr>
+          <!--//  TR -->
 
-						<%}%>
+          <!--  TR -->
+              <tr>
+                <td>Post code</td>
+                <td>
 
+                  <input type="text" name="zip" size="6" class="input_fields"  >
+                   </td>
+              </tr>
+          <!--//  TR -->
 
-					 </h4>
+          <!--  TR -->
+              <tr>
+                <td>Address</td>
+                <td>
+                  <input type="text" name="stu_address" class="input_fields" >
+                   </td>
+              </tr>
+          <!--//  TR -->
 
-					<h3>Register new Student</h3>
-<form name="f1" method="POST" action="../students/add" >
-					<table class="table table-hover">
+          <!--  TR -->
+              <tr>
+                <td>City</td>
+                <td>
+                  <input type="text"  name="stu_city" class="input_fields" >
+                   </td>
+              </tr>
+          <!--//  TR -->
 
-  <tbody>
-<!--  TR -->
-    <tr>
-      <td>Bootcamp</td>
-      <td>
-      	<select name="slelectbootcamp" >
-      		<option value="">Select bootcamp name</option>
-          <%result.forEach(function(res){%>
-          <option value="<%=res.bootcamp_id%>"> <%=res.bootcamp_name%> </option>
-          <%});%>
-        </select>
-      	 </td>
-    </tr>
-<!--//  TR -->
+          <!--  TR -->
+              <tr>
+                <td>Card id #</td>
+                <td>
+                  <input type="text"  name="stu_card" class="input_fields" required="" oninvalid="this.setCustomValidity('Card number is required')"
+          oninput="setCustomValidity('')">
+                  </td>
+              </tr>
+          <!--//  TR -->
+              <tr>
 
-<!--  TR -->
-    <tr>
-      <td>Student name</td>
-      <td>
-      	<input type="text" name="stu_name" class="form-control form-control-sm" required="" oninvalid="this.setCustomValidity('Name is required')"
-oninput="setCustomValidity('')">
-      	 </td>
-    </tr>
-<!--//  TR -->
+                <td  align="center">
 
-<!--  TR -->
-    <tr>
-      <td>Student birth date</td>
-      <td>
-      	<input type="date" name="stu_birth" class="form-control form-control-sm" >
-      	 </td>
-    </tr>
-<!--//  TR -->
-
-<!--  TR -->
-    <tr>
-      <td>Student nationality</td>
-      <td>
-				<select name="stu_nath" >
-      		<option value="">Select nationality</option>
-          <%result_country.forEach(function(res){%>
-          <option value="<%=res.num_code%>"> <%=res.nationality%> </option>
-          <%});%>
-        </select>
-      	 </td>
-    </tr>
-<!--//  TR -->
-
-<!--  TR -->
-    <tr>
-      <td>Phone #</td>
-      <td>
-      	<input type="text" name="stu_phon" class="form-control form-control-sm" >
-      	 </td>
-    </tr>
-<!--//  TR -->
-
-<!--  TR -->
-    <tr>
-      <td>E-mail</td>
-      <td>
-      	<input type="text" name="stu_email" class="form-control form-control-sm" required="" oninvalid="this.setCustomValidity('Name is required')"
-oninput="setCustomValidity('')">
-      	 </td>
-    </tr>
-<!--//  TR -->
-
-<!--  TR -->
-    <tr>
-      <td>Post code</td>
-      <td>
-
-      	<input type="text" name="zip" size="6" class="form-control"  >
-      	 </td>
-    </tr>
-<!--//  TR -->
-
-<!--  TR -->
-    <tr>
-      <td>Address</td>
-      <td>
-      	<input type="text" name="stu_address" class="form-control form-control-sm" >
-      	 </td>
-    </tr>
-<!--//  TR -->
-
-<!--  TR -->
-    <tr>
-      <td>City</td>
-      <td>
-      	<input type="text"  name="stu_city" class="form-control form-control-sm" >
-      	 </td>
-    </tr>
-<!--//  TR -->
-
-<!--  TR -->
-    <tr>
-      <td>Card id #</td>
-      <td>
-      	<input type="text"  name="stu_card" class="form-control form-control-sm" required="" oninvalid="this.setCustomValidity('Card number is required')"
-oninput="setCustomValidity('')">
-				</td>
-    </tr>
-<!--//  TR -->
-<tr>
-	<td>
-		<form action="/upload/upload" enctype="multipart/form-data" method="post">
-			<input type="file" name="upload">
-			<input type="submit" value="Upload">
-		</form>
-	</td>
-</tr>
-
-<!--  TR -->
-    <tr>
-
-			<td  align="center">
-
-  	 </td>
-		 <td  align="center">
-			 <input type="submit" name="saveme" value="Save student"  class="btn btn-primary">
-		</td>
-    </tr>
-<!--//  TR -->
-  </tbody>
-</table>
-</form>
+               </td>
+               <td  align="center">
+                 <input type="submit" name="saveme" value="Save student"  class="btn_stu">
+              </td>
+              </tr>
+          <!--//  TR -->
+            </tbody>
+          </table>
+          </form>
+						</tbody>
+					</table>
 				</div>
+			</div>
 
 
-
-		</div>
-	</main>
-
-
-
-	<footer>
-		<% include ./partials/footer %>
-	</footer>
+<footer>
+  <% include ./partials/footer %>
+</footer>
 
 </body>
