--- a/public/css/extra.css
+++ b/public/css/extra.css
@@ -1,7 +1,7 @@
 
-table#acrylic {
+table#acrylic1 {
             border-collapse: separate;
-            background: rgba(189, 178, 178, 0.9);
+            background: rgba(189, 178, 178, 0.5);
             -moz-border-radius: 5px;
             -webkit-border-radius: 5px;
             border-radius: 5px;
@@ -9,7 +9,7 @@ table#acrylic {
             -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
             -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-            width: 550px;
+            width: 1000px;
         }
 
 
@@ -35,12 +35,7 @@ table#acrylic {
   color: white;
   text-align: center;
 }
-        #acrylic thead {
-            -moz-border-radius: 5px;
-            -webkit-border-radius: 5px;
-            border-radius: 5px;
-        }
-        #acrylic thead {
+        #acrylic1 thead {
             -moz-border-radius: 5px;
             -webkit-border-radius: 5px;
             border-radius: 5px;
@@ -52,7 +47,7 @@ table#acrylic {
             padding-left: 200px;
 
         }
-        #acrylic thead th {
+        #acrylic1 thead th {
             font-size: 16px;
             font-weight: 400;
             color: #fff;
@@ -67,19 +62,19 @@ table#acrylic {
 
         }
 
-        #acrylic thead th:first-child {
+        #acrylic1 thead th:first-child {
             -moz-border-top-right-radius: 5px;
             -webkit-border-top-left-radius: 5px;
             border-top-left-radius: 5px;
         }
 
-        #acrylic thead th:last-child {
+        #acrylic1 thead th:last-child {
             -moz-border-top-right-radius: 5px;
             -webkit-border-top-right-radius: 5px;
             border-top-right-radius: 5px;
         }
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-        #acrylic tbody tr td {
+        #acrylic1 tbody tr td {
             font-family: $font-family;
             font-weight: 600;
             color: #282828;
