--- a/views/seestudents.ejs
+++ b/views/seestudents.ejs
@@ -5,24 +5,27 @@
   <body>
    <header>
      <link rel="stylesheet" href="./css/editstud.css">
+     <link href="/css/students.css" rel="stylesheet" type="text/css">
      <link href="css/records.css" rel="stylesheet" type="text/css">
        <% include ./partials/header %>
    </header>
    <div class="container">
-     <input type="text" id="myInput" class="search" onkeyup="myFunction()" placeholder="Search for Bootcamp..">
    <div class="wrapper">
     <table class="table table-hover" id="acrylic">
-      <tbody>
+      <thead>
        <tr >
-         <th class="table-students"> Bootcamp Name: </th>
+         <th > Bootcamp Name: </th>
          <th> Start Date: </th>
        </tr>
+     </thead>
+     <tbody>
        <% for(i=0 ; i < result_bootcamps.length ; i++){ var date = result_bootcamps[i].start_date %>
        <tr>
            <td> <a style="text-decoration:none" href="/seestuds/stu/<%= result_bootcamps[i].bootcamp_id %>">
             <span class="link"> <strong class="black"> <%= result_bootcamps[i].bootcamp_name %></strong> </span> </a></td>
            <td><%= date.toDateString() %></td>  <% } %>
        </tr>
+
       </tbody>
     </table>
       </div>
