--- a/views/edit_student.ejs
+++ b/views/edit_student.ejs
@@ -42,7 +42,7 @@ oninput="setCustomValidity('')"/>
     <tr>
       <td>Birth date</td>
       <td>
-      	<input type="text" name="stu_birth" class="input_fields"  value="<%=result[i].stu_birth_date.Date()%>" oninvalid="this.setCustomValidity('date is required')"
+      	<input type="text" name="stu_birth" class="input_fields"  value="1997 05 04" oninvalid="this.setCustomValidity('date is required')"
 oninput="setCustomValidity('')"/>
       	 </td>
     </tr>
