--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <div class="container-fluid">
 
       <div class="navbar-header">
-          <a  href="/">
+          <a  href="#">
               <span class="navbar-brand">Welcome</span>
           </a>
 
