--- a/public/css/live_checkin.css
+++ b/public/css/live_checkin.css
@@ -1,4 +1,16 @@
-
+#welcome_msg{
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 600px;
+  width: 500px;
+  font-family: inherit;
+  font-size: 14pt;
+  color: #3c763d;
+  text-align: center;
+  border-radius: 5px;
+  background-color: #dff0d8;
+  box-shadow: 2px 2px 5px #222222;
+}
 h1{
   font-size: 30px;
   color: #fff;
