--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -25,8 +25,8 @@ body {
   line-height:30px;
   background-size: 200% 100% !important;
   animation: move 10s ease infinite;
-  transform: translate3d(0, 0, 0);
-  background: linear-gradient(45deg, #E74C3C 10%, #514f51 90%);
+  /*transform: translate3d(0, 0, 0);*/
+  background: #D37067;
   height: 100vh
 }
 .container {
@@ -36,7 +36,7 @@ body {
 	position:relative;
 }
 .container_main {
-	max-width:600px;
+	max-width:800px;
 	width:100%;
   margin:0 auto;
   position:relative;
