--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 <li><a href="admin/profile/1">Edit your profile</a></li>
 </ul>
         <ul class="nav navbar-nav">
-            <li><a href="/live2">Live Check-in</a></li>
+            <li><a href="/">Live Check-in</a></li>
             <li><a href="/bootcamp">Manage Bootcamps</a></li>
             <li><a href="/seestuds">Manage Students</a></li>
             <li><a href="/students">Add Student</a></li>
