--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,6 +5,20 @@
   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+<!-- Here is for Side bar menu -->
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("Side_Slide").style.marginLeft = "250px";
+}
+
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("Side_Slide").style.marginLeft= "0";
+}
+</script>
+<!-- Here is for Side bar menu -->
+
 <script type="text/javascript" src="/javascript/jq.js"></script>
 </body>
 </html>
