--- a/views/seestudents.ejs
+++ b/views/seestudents.ejs
@@ -14,16 +14,19 @@
     <table class="table table-hover" id="acrylic">
       <thead>
        <tr >
-         <th > Bootcamp Name: </th>
-         <th> Start Date: </th>
+         <th > Choose Bootcamp </th>
+         <th> Started Date </th>
        </tr>
      </thead>
      <tbody>
-       <% for(i=0 ; i < result_bootcamps.length ; i++){ var date = result_bootcamps[i].start_date %>
+       <%
+       for(i=0 ; i < result_bootcamps.length ; i++)
+       { var date = result_bootcamps[i].start_date;
+        %>
        <tr>
            <td> <a style="text-decoration:none" href="/seestuds/stu/<%= result_bootcamps[i].bootcamp_id %>">
             <span class="link"> <strong class="black"> <%= result_bootcamps[i].bootcamp_name %></strong> </span> </a></td>
-           <td><%= date.toDateString() %></td>  <% } %>
+           <td><%= date.toUTCString() %></td>  <% } %>
        </tr>
 
       </tbody>
