Upload image for bootcamps
Ability to add image for each bootcamp... work in progress yet...

--- a/views/seestudents.ejs
+++ b/views/seestudents.ejs
@@ -26,7 +26,7 @@
        <tr>
            <td> <a style="text-decoration:none" href="/seestuds/stu/<%= result_bootcamps[i].bootcamp_id %>">
             <span class="link"> <strong class="black"> <%= result_bootcamps[i].bootcamp_name %></strong> </span> </a></td>
-           <td><%= date.toUTCString() %></td>  <% } %>
+           <td><%= date.toDateString() %></td>  <% } %>
        </tr>
 
       </tbody>
