--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,20 +5,26 @@
 </head>
   <body>
 <header>
-  <nav class="navbar navbar-inverse bg-inverse" role="navigation">
+    <nav class="navbar navbar-inverse bg-inverse" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          <div class="navbar-collapse collapse d-inline">
+            <a href="/" class="navbar-brand">Welcome
+        </a>
+            <ul class="nav navbar-nav">
+                <li><a href="/admin">Log in</a></li>
+                <li><a href="/main">Check in System</a></li>
+                <li><a href="/students">About</a></li>
+            </ul>
+        </div>
 
-      <div class="navbar-header">
-          <a  href="#">
-              <span class="navbar-brand">Welcome</span>
-          </a>
-
-          <ul class="nav navbar-nav">
-              <li><a href="/about">About</a></li>
-          </ul>
-      </div>
-
-  </div>
-  </nav>
+    </div>
+    </nav>
 </header>
 
     <div class="user">
