--- a/views/live_checkin.ejs
+++ b/views/live_checkin.ejs
@@ -13,18 +13,15 @@
  else { %>
   <nav class="navbar navbar-inverse bg-inverse" role="navigation">
   <div class="container-fluid">
-
       <div class="navbar-header">
-
-
-        <a  href="#">
-            <span class="navbar-brand">Welcome</span>
-        </a>
-  <ul class="dropdown-menu">
-  <li><a href="/profile/1">Edit your profile</a></li>
-  </ul>
-
-
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        <div class="navbar-collapse collapse d-inline">
+          <a href="/" class="navbar-brand">Welcome
+      </a>
           <ul class="nav navbar-nav">
               <li><a href="/admin">Log in</a></li>
               <li><a href="/main">Check in System</a></li>
