--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,14 +13,16 @@
 <ul class="dropdown-menu d-inline">
 <li><a href="admin/profile/1">Edit your profile</a></li>
 </ul>
-        <ul class="nav navbar-nav d-inline">
+        <ul class="nav navbar-nav navbar-left d-inline">
             <li class="navbar-left"><a href="/">Live Check-in</a></li>
             <li class="navbar-left"><a href="/bootcamp">Manage Bootcamps</a></li>
             <li class="navbar-left"><a href="/seestuds">Manage Students</a></li>
             <li class="navbar-left"><a href="/students">Add Student</a></li>
             <li class="navbar-left"><a href="/reports">Reports</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right d-inline">
             <li class="logout navbar-right"><a href="/bootcamp/signout"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
-        </ul>
+          </ul>
     </div>
 </div>
 </div>
