--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -50,27 +50,39 @@ body {
 
 .btn_edit {
     display: inline-block;
-    width: 30%;
+    width: 30% !important;
     padding: 10px;
     font-family: $font-family;
     -webkit-appearance: none;
-    border-radius: 3px;
-    margin-left: 5px;
+    border-radius: 4px;
     margin-top: 20px;
-    outline: 0;
-    border: 0;
-    color: white;
-    background: #4f4c4a;
-    transition: 0.3s;
-
+    margin-left: 50px;
+    background: #333333 !important;
 }
-.btn_edit:active, .btn_edit:focus { background: rgb(193, 40, 40); }
-
-
+.btn_edit:hover{
+  color: white !important;
+  background: #c13526 !important;
+}
+.btn_back {
+    display: inline-block;
+    width: 30% !important;
+    padding: 10px;
+    font-family: $font-family;
+    -webkit-appearance: none;
+    border-radius: 4px;
+    margin-top: 20px;
+    margin-left: 50px;
+    background: #333333 !important;
+}
+.btn_back:hover{
+  color: white !important;
+  background: #e5bf00 !important;
+}
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
 
 #contact {
+  width: 400px;
 	background:#F9F9F9;
 	padding:25px;
 	margin:50px 0;
@@ -124,7 +136,7 @@ fieldset {
 	width:100%;
 	border:none;
 	background:#43b2f2;
-	color:#000;
+	color:#fff;
 	margin:20px 0 -10px 5px;
 	padding:10px;
 	font-size:15px;
@@ -161,6 +173,8 @@ footer{
 }
 .logout{
   color: red;
+
+  left: 100%;
 }
 .user {
     width: 90%;
@@ -199,7 +213,11 @@ footer{
     opacity: 1;
     transform: translate3d(0, 0, 0);
 }
-
+.group_photo{
+  border-radius: 10px;
+  border-color: 2px solid #4f4c4a;
+  width: 200px;
+}
 .form__input {
     display: block;
     width: 100%;
@@ -226,6 +244,11 @@ footer{
 
 }
 .btn:active, .btn:focus { background: rgb(96, 96, 96); }
+
+.btc_img{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 @keyframes NO {
   from, to {
     -webkit-transform: translate3d(0, 0, 0);
